@@ -36,12 +36,12 @@ class PersonControllerIT {
         assertThat(persons).isNotNull().hasSize(3);
 
         final Person person
-                = personController.getById(persons.get(0).id());
+                = personController.getById(persons.getFirst().id());
         assertThat(person).isNotNull();
-        assertThat(person.firstName()).isEqualTo(persons.get(0).firstName());
-        assertThat(person.lastName()).isEqualTo(persons.get(0).lastName());
+        assertThat(person.firstName()).isEqualTo(persons.getFirst().firstName());
+        assertThat(person.lastName()).isEqualTo(persons.getFirst().lastName());
 
-        assertThat(personRepository.findById(persons.get(0).id()).get().getOrganizationId()).isEqualTo("1");
+        assertThat(personRepository.findById(persons.getFirst().id()).get().getOrganizationId()).isEqualTo("1");
     }
 
     @Test
@@ -55,25 +55,25 @@ class PersonControllerIT {
     public void findByFirstName() {
         List<Person> persons = personController.findByFirstName("Monty");
         assertThat(persons).isNotNull().hasSize(1);
-        assertThat(persons.get(0).firstName()).isEqualTo("Monty");
-        assertThat(persons.get(0).lastName()).isEqualTo("Burns");
-        assertThat(persons.get(0).address()).isNotEmpty();
+        assertThat(persons.getFirst().firstName()).isEqualTo("Monty");
+        assertThat(persons.getFirst().lastName()).isEqualTo("Burns");
+        assertThat(persons.getFirst().address()).isNotEmpty();
     }
 
     @Test
     public void findByLastName() {
         List<Person> persons = personController.findByLastName("Simpson");
         assertThat(persons).isNotNull().hasSize(2);
-        assertThat(persons.get(0).lastName()).isEqualTo("Simpson");
-        assertThat(persons.get(0).address()).isNotEmpty();
+        assertThat(persons.getFirst().lastName()).isEqualTo("Simpson");
+        assertThat(persons.getFirst().address()).isNotEmpty();
     }
 
     @Test
     public void findByAddressCity() {
         List<Person> persons = personController.findByStreet("Evergreen Terrace");
         assertThat(persons).isNotNull().isNotEmpty();
-        assertThat(persons.get(0).address().get(0).street()).startsWith("Evergreen Terrace No.");
-        //assertThat(persons.get(0).lastName()).isEqualTo("Simpson");
+        assertThat(persons.getFirst().address().getFirst().street()).startsWith("Evergreen Terrace No.");
+        //assertThat(persons.getFirst().lastName()).isEqualTo("Simpson");
     }
 
     @Test
